# web_server_task

./: .gitignore  Cargo.toml  README.md  TODO  res.json  res2.json
crates/aaa/: Cargo.toml
crates/entity/: Cargo.toml
crates/entity/src/: lib.rs
crates/migration/: Cargo.toml
crates/migration/src/: m20220101_000001_create_table.rs  main.rs
crates/server/: Cargo.toml
crates/server/src/: error.rs  main.rs
crates/server/src/client/: filter.rs  manager.rs  mod.rs
crates/server/src/db/: mutation.rs  query.rs
crates/server/src/examples/: state.rs
crates/server/src/routes/: mod.rs  requests.rs  run.rs
src/: client.rs  error.rs  main.rs
src/client/: filter.rs
src/examples/: cp.rs  mut_state.rs
