[package]
name = "web-server-task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.33", features = ["full"] }
# actix = "*"
actix-web = "4.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
thiserror = "1.0"
uuid = { version = "1.5", "features" = ["v4", "fast-rng", "macro-diagnostics"] }
reqwest = { version = "0.11", "features" = ["json"] }
sqlx = "0.7"
# sea-orm = "0.12"
env_logger = "0.10"
async-trait = "*"
url = "*"
log = "*"
rand = "*"
rstest = "*"
