[workspace.package]
authors = ["Grzegorz Limanówka"]
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    # 
    "crates/server",
    "crates/migration",
    "crates/entity",
]

[workspace.dependencies]
tokio = { version = "1.33" }
actix-web = "4.4"
async-trait = "0.1"

sqlx = "0.7"
sea-orm = "0.12"

serde = { version = "1.0" }
serde_json = { version = "1.0" }
thiserror = "1.0"
uuid = { version = "1.5" }
reqwest = { version = "0.11" }
env_logger = "0.10"
url = "2.5"
log = "0.4"
rand = "0.8"
rstest = "0.18"
