[package]
name = "web-server-task"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { "workspace" = true, features = ["full"] }
actix-web = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, "features" = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
reqwest = { workspace = true, "features" = ["json"] }
sqlx = { workspace = true }
# sea-orm = {workspace = true}
env_logger = { workspace = true }
async-trait = { workspace = true }
url = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
