[package]
name = "server"
version = { workspace = true }
edition = { workspace = true }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { "workspace" = true, features = ["full"] }
actix-web = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

sqlx = { workspace = true }
sea-orm = { workspace = true, features = [
    "sqlx-mysql",
    "runtime-tokio-native-tls",
    "macros",
] }

serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true, "features" = [
    "v4",
    "fast-rng",
    "macro-diagnostics",
] }
reqwest = { workspace = true, "features" = ["json"] }
env_logger = { workspace = true }
url = { workspace = true }
log = { workspace = true }
rand = { workspace = true }
rstest = { workspace = true }
dotenvy = { workspace = true }

entity = { path = "../entity" }
migration = { path = "../migration" }
